objects/ssot__JobPosition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeText__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HeldByEmployeeId__c</fullName>
        <label>Held By Employee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Job Position Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionStatus__c</fullName>
        <label>Job Position Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Job Location</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagerId__c</fullName>
        <label>Manager</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionId__c</fullName>
        <label>Position</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TitleText__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128946960_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPosition_LocationId_map_Location__rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>JobPosition_LocationId_map_Location__rel</relationshipLabel>
        <relationshipName>rel_1723128946960_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366624877_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPosition_HeldByEmployeeId_map_Emp_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>JobPosition_HeldByEmployeeId_map_Emp_rel</relationshipLabel>
        <relationshipName>rel_1727366624877_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366629540_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPosition_ManagerId_map_Employee_I_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>JobPosition_ManagerId_map_Employee_I_rel</relationshipLabel>
        <relationshipName>rel_1727366629540_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>